Fix RTL spacing issues in ConversationListItem.

--- a/ui/geary.css
+++ b/ui/geary.css
@@ -71,13 +71,21 @@ list.geary-conversation-list > row {
 
 /* ConversationListItem */
 
-/* XXX RTL */
 grid.geary-conversation-list-item {
-  border-left: 4px solid transparent;
+  border: 4px solid transparent;
+  border-top-width: 0px;
+  border-bottom-width: 0px;
   margin: 0px;
   padding: 12px;
-  padding-left: 0;
   transition: border 4s;
+}
+grid.geary-conversation-list-item:dir(ltr) {
+  border-right-width: 0px;
+  padding-left: 0;
+}
+grid.geary-conversation-list-item:dir(rtl) {
+  border-left-width: 0px;
+  padding-right: 0;
 }
 
 grid.geary-conversation-list-item.geary-unread {
@@ -85,9 +93,18 @@ grid.geary-conversation-list-item.geary-unread {
   transition: border 0.25s;
 }
 
+grid.geary-conversation-list-item label.geary-date:dir(ltr) {
+  margin-right: 6px;
+}
+
+grid.geary-conversation-list-item label.geary-date:dir(rtl) {
+  margin-left: 6px;
+}
+
 grid.geary-conversation-list-item label.geary-count {
   padding: 2px 6px;
   border-radius: 2px;
+  font-size: small;
   color: @theme_selected_fg_color;
   background: @theme_selected_bg_color;
 }
